# fnerror

./: Cargo.toml  README.md
src/: lib.rs  return_type.rs  utils.rs  visitors.rs
src/visitors/: fnerr.rs  generics.rs
